<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="540px"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">
    
    <TextView android:id="@+id/maininfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="9px"
        android:gravity="left"
        android:textColor="@android:color/black"
        android:text="@string/selectProtocol"
        android:textSize="45px"/>

    <RadioButton android:id="@+id/rb_udp"
        android:layout_width="490px"
        android:layout_height="80px"
        android:layout_marginTop="20px"
        android:textSize="30px"
        android:paddingLeft="40px"
        android:paddingRight="25px"
        android:text="@string/udp" />"

    <RadioButton android:id="@+id/rb_tcp"
        android:layout_width="490px"
        android:layout_height="80px"
        android:layout_marginTop="20px"
        android:layout_marginBottom="25px"
        android:textSize="30px"
        android:paddingLeft="40px"
        android:paddingRight="25px"
        android:text="@string/tcp" />

     <TableLayout 
	   android:layout_width="match_parent" 
	   android:layout_height="wrap_content" 
	   android:stretchColumns="1"
	   android:gravity="center_vertical"> 
	 
	   <TableRow> 
	       <TextView 
	           android:text="default port:" 
	           android:textSize="40px"
	           android:gravity="right" 
	           android:padding="3dip" /> 
	 
	       <EditText android:id="@+id/port_edit" 
	           android:padding="3dip" 
	           android:scrollHorizontally="false" 
	           android:digits="0123456789"
	           android:ems = "1" /> 
	   </TableRow> 	

	   <TextView 
			android:text="Help:" 
			android:textSize="30px"
			android:gravity="left" 
			android:padding="3dip" /> 
		<TextView 
			android:text="1.Input valid TCP/UDP port num firstly;" 
			android:textSize="30px"
			android:gravity="left" 
			android:padding="3dip" /> 
		<TextView 
			android:text="2.the port number format is 8000" 
			android:textSize="30px"
			android:gravity="left" 
			android:padding="3dip" /> 
	    
     </TableLayout>


</LinearLayout>